[package]
name = "directory_manager"
authors = ["Achsion"]
version = "0.1.0"
edition = "2021"
description = "A small manager/helper in addition to the directories crate"
repository = "https://github.com/Achsion/rust-directory_manager"
rust-version = "1.74"
license = "LICENSE"

[dependencies]
directories = "5.0.1"
